--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,11 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-   button {
-      @apply focus:outline-none focus:ring-4 focus:ring-sky-300;
-   }
-}
+@import "components.css";
 
 html,
 body {
