--- a/styles/components.css
+++ b/styles/components.css
@@ -8,7 +8,7 @@
    }
 
    .btn-ghost {
-      @apply btn text-gray-500 hover:text-gray-800 hover:bg-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 active:bg-gray-300 px-4 py-3 rounded-xl;
+      @apply btn rounded-xl text-gray-500 hover:text-gray-800 hover:bg-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 active:bg-gray-300 px-4 py-3;
    }
 
    .btn-primary {
