--- a/styles/components.css
+++ b/styles/components.css
@@ -22,4 +22,12 @@
    .btn-icon {
       @apply btn  rounded-full h-12 w-12 text-center justify-center text-gray-500 hover:text-gray-800 hover:bg-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 active:bg-gray-300;
    }
+
+   .input {
+      @apply bg-gray-50 dark:bg-gray-800 dark:text-white border  block w-full p-2.5 border-gray-600 text-gray-900 sm:text-sm rounded-xl hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none  focus:border-sky-500 focus:ring-1 focus:ring-sky-300;
+   }
+
+   .xlContainer {
+      @apply w-full max-w-6xl mx-auto;
+   }
 }
