--- a/styles/components.css
+++ b/styles/components.css
@@ -12,7 +12,7 @@
    }
 
    .btn-primary {
-      @apply btn rounded-xl  text-white border-2 border-sky-500 bg-sky-500 hover:border-sky-600 hover:bg-sky-600 px-8 py-2 transform active:scale-90;
+      @apply btn rounded-xl  text-white border-2 border-sky-500 !bg-sky-500 hover:border-sky-600 hover:bg-sky-600 px-8 py-2 transform active:scale-90;
    }
 
    .btn-secondary {
@@ -23,8 +23,12 @@
       @apply btn  rounded-full h-12 w-12 text-center justify-center text-gray-500 hover:text-gray-800 hover:bg-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 active:bg-gray-300;
    }
 
+   .link {
+      @apply text-sm hover:underline text-gray-600 dark:text-gray-400;
+   }
+
    .input {
-      @apply bg-gray-50 dark:bg-gray-800 dark:text-white border  block w-full p-2.5 border-gray-600 text-gray-900 sm:text-sm rounded-xl hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none  focus:border-sky-500 focus:ring-1 focus:ring-sky-300;
+      @apply bg-gray-50 dark:bg-gray-800 dark:text-white border  block w-full p-2.5 border-gray-600 text-gray-900 text-sm rounded-xl hover:bg-gray-100 dark:hover:bg-gray-700 focus:outline-none  focus:border-sky-500 focus:ring-1 focus:ring-sky-300;
    }
 
    .xlContainer {
