--- a/styles/components.css
+++ b/styles/components.css
@@ -23,6 +23,10 @@
       @apply btn  rounded-full h-12 w-12 text-center justify-center text-gray-500 hover:text-gray-800 hover:bg-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 active:bg-gray-300;
    }
 
+   .btn-icon-1 {
+      @apply btn-icon bg-white dark:bg-gray-900 border dark:border-gray-700 shadow;
+   }
+
    .link {
       @apply text-sm hover:underline text-gray-600 dark:text-gray-400;
    }
