--- a/styles/components.css
+++ b/styles/components.css
@@ -27,6 +27,10 @@
       @apply btn-icon bg-white dark:bg-gray-900 border dark:border-gray-700 shadow;
    }
 
+   .tag {
+      @apply btn text-gray-500 dark:text-gray-400 border border-gray-500 dark:border-gray-400 hover:!text-sky-500 hover:!border-sky-500 px-2 py-1 text-xs rounded-full;
+   }
+
    .link {
       @apply text-sm hover:underline text-gray-600 dark:text-gray-400;
    }
