--- a/styles/components.css
+++ b/styles/components.css
@@ -7,6 +7,10 @@
       @apply capitalize font-semibold  tracking-wider  flex items-center gap-2 transition duration-300 disabled:opacity-60 disabled:pointer-events-none focus:outline-none focus:ring-2 focus:ring-sky-300;
    }
 
+   .btn-1 {
+      @apply text-white w-full capitalize font-medium flex items-center gap-2 rounded-xl hover:bg-white hover:text-gray-700;
+   }
+
    .btn-ghost {
       @apply btn rounded-xl text-gray-500 hover:text-gray-800 hover:bg-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 active:bg-gray-300 px-4 py-3;
    }
@@ -45,5 +49,9 @@
 
    .toast {
       @apply !px-5 !py-4 !rounded-xl !font-medium tracking-wide dark:!text-white dark:!bg-gray-900;
+   }
+
+   .tooltip {
+      @apply text-sm font-semibold capitalize bg-white shadow-2xl border py-2 px-3 absolute left-[122px] top-0 group-hover:top-1/2 transform -translate-y-1/2 rounded-xl w-[122px] opacity-0 group-hover:opacity-100 transition-all duration-300 pointer-events-none;
    }
 }
