--- a/styles/components.css
+++ b/styles/components.css
@@ -50,8 +50,7 @@
    .toast {
       @apply !px-5 !py-4 !rounded-xl !font-medium tracking-wide dark:!text-white dark:!bg-gray-900;
    }
-
    .tooltip {
-      @apply text-sm font-semibold capitalize bg-white shadow-2xl border py-2 px-3 absolute left-[122px] top-0 group-hover:top-1/2 transform -translate-y-1/2 rounded-xl w-[122px] opacity-0 group-hover:opacity-100 transition-all duration-300 pointer-events-none;
+      @apply text-sm font-semibold capitalize bg-white shadow-2xl border py-2 px-3 absolute left-[122px] top-0 group-hover:top-1/2 transform -translate-x-1/2 -translate-y-1/2  rounded-xl w-[122px] opacity-0 group-hover:opacity-100 transition-all duration-300 pointer-events-none;
    }
 }
