--- a/styles/components.css
+++ b/styles/components.css
@@ -32,7 +32,11 @@
    }
 
    .tag {
-      @apply btn text-gray-500 dark:text-gray-400 border border-gray-500 dark:border-gray-400 hover:!text-sky-500 hover:!border-sky-500 px-2 py-1 text-xs rounded-full;
+      @apply btn gap-0 text-gray-500 dark:text-gray-400 border border-gray-500 dark:border-gray-400 hover:!text-sky-500 hover:!border-sky-500 px-2 py-1 text-xs rounded-full;
+   }
+
+   .cat {
+      @apply font-medium border text-xs md:text-sm border-white bg-black bg-opacity-30 text-white w-min px-4 py-1 rounded-md capitalize hover:text-sky-500 hover:border-sky-500;
    }
 
    .link {
